--- a/analysis.qmd
+++ b/analysis.qmd
@@ -3,3 +3,20 @@ title: "analysis"
 format: html
 editor: visual
 ---
+
+```{r}
+library(HistData)
+#library(tidyverse)
+
+
+```
+
+
+
+
+```{r}
+breslau=Breslau|>
+  filter("age">=5)
+breslau
+
+```
